implementation/generated_ASTs/test/test262/tests/built-ins/Error/prototype/message/15.11.4.3-1.js.esl
function buildAST (___internal_esl_global) {
__n0 := {  };
__n0["type"] := "Program";
__n0["sourceType"] := "script";
__n2 := {  };
__n2["type"] := "ForInStatement";
__n3 := {  };
__n3["type"] := "VariableDeclarator";
__n4 := {  };
__n4["type"] := "Identifier";
__n4["name"] := "i";
__n3["id"] := __n4;
__n3["init"] := null;
__n2["left"] := __n3;
__n5 := {  };
__n5["type"] := "MemberExpression";
__n6 := {  };
__n6["type"] := "Identifier";
__n6["name"] := "Error";
__n5["object"] := __n6;
__n7 := {  };
__n7["type"] := "Literal";
__n7["value"] := "prototype";
__n7["raw"] := "\"prototype\"";
__n5["property"] := __n7;
__n5["computed"] := true;
__n2["right"] := __n5;
__n8 := {  };
__n8["type"] := "BlockStatement";
__n10 := {  };
__n10["type"] := "ExpressionStatement";
__n11 := {  };
__n11["type"] := "CallExpression";
__n12 := {  };
__n12["type"] := "MemberExpression";
__n13 := {  };
__n13["type"] := "Identifier";
__n13["name"] := "assert";
__n12["object"] := __n13;
__n14 := {  };
__n14["type"] := "Literal";
__n14["value"] := "notSameValue";
__n14["raw"] := "\"notSameValue\"";
__n12["property"] := __n14;
__n12["computed"] := true;
__n11["callee"] := __n12;
__n16 := {  };
__n16["type"] := "Identifier";
__n16["name"] := "i";
__n17 := {  };
__n17["type"] := "Literal";
__n17["value"] := "message";
__n17["raw"] := "\"message\"";
__n18 := {  };
__n18["type"] := "Literal";
__n18["value"] := "i";
__n18["raw"] := "'i'";
__n15 := [ __n16, __n17, __n18 ];
__n11["arguments"] := __n15;
__n10["expression"] := __n11;
__n9 := [ __n10 ];
__n8["body"] := __n9;
__n2["body"] := __n8;
__n2["each"] := false;
__n1 := [ __n2 ];
__n0["body"] := __n1;
__n0["optimised"] := true;
__n19 := [ "i" ];
__n0["variableDeclarations"] := __n19;
__n20 := [  ];
__n0["functionDeclarations"] := __n20;
__n0["codeType"] := "global";
__n0["strict"] := false;
return ( false, __n0 )
}